Donnie's conformation_dependent_restraints moved from the branch to the trunk, with changes:
  conformation_dependent_restraints.py:

    Near the top I added this code:

      if (not libtbx.env.has_module("conformation_dependent_geometry")):
        conformation_dependent_geometry = None
        is_available = False
      else:
        import conformation_dependent_geometry.angles
        is_available = True

     I moved the build_conformation_dependent_angle_proxies() function
     from pdb_interpretation.py into conformation_dependent_restraints.py.
     (Note that I also changed the name from build_conformer_dep*, to be in
     line with the other names.)

  pdb_interpretation.py:

    Calls the build_conformation_dependent_angle_proxies() function
    only if (conformation_dependent_restraints.is_available).
    Otherwise the conformation_dependent_restraints_list is empty.

  tst_conformation_dependent_restraints.py:

    Prints "Skipping tst"
    if (not conformation_dependent_restraints.is_available).

    The x.update_restraints() code you had in pdb_interpretation.py
    is now in the tst script. Run the script with a pdb file name
    to exercise this code.

--- a/.gitattributes
+++ b/.gitattributes
@@ -214,10 +214,12 @@ mmtbx/maps.py -text
 mmtbx/model_statistics.py -text
 mmtbx/model_vs_data.py -text
 mmtbx/monomer_library/apply_mod_rna.py svneol=native#text/x-python
+mmtbx/monomer_library/conformation_dependent_restraints.py svneol=native#text/x-python
 mmtbx/monomer_library/mod_rnaC2.cif -text
 mmtbx/monomer_library/mod_rnaC3.cif -text
 mmtbx/monomer_library/mod_rnaEsd.cif -text
 mmtbx/monomer_library/rna_sugar_pucker_analysis.py svneol=native#text/x-python
+mmtbx/monomer_library/tst_conformation_dependent_restraints.py svneol=native#text/x-python
 mmtbx/monomer_library/tst_protein_interpretation.py -text
 mmtbx/monomer_library/tst_rna_dna_interpretation.py -text
 mmtbx/monomer_library/tst_rna_sugar_pucker_analysis.py svneol=native#text/x-python
