--- a/.gitattributes
+++ b/.gitattributes
@@ -178,6 +178,7 @@ libtbx/command_line/sge_qstat_counts.py svneol=native#text/x-python
 libtbx/command_line/sh.sh -text
 libtbx/command_line/show_environ_usage.py svneol=native#text/x-python
 libtbx/command_line/show_include_paths.py svneol=native#text/x-python
+libtbx/command_line/show_number_of_processors.py svneol=native#text/x-python
 libtbx/command_line/tcsh.sh -text
 libtbx/libtbx_refresh.py -text
 libtbx/object_oriented_patterns.py -text
