- major bug fix: the cycles of polishing were not applied to the final structure - major bug fix: restarting was not with new random phases - bit less ambitious with the tests - complete overhaul of the phase transition detection - change the guessing of the initial delta - remove unused code from tests and put it in development module

--- a/.gitattributes
+++ b/.gitattributes
@@ -353,6 +353,7 @@ smtbx/ab_initio/__init__.py -text
 smtbx/ab_initio/ab_initio_ext.cpp -text
 smtbx/ab_initio/charge_flipping.py -text
 smtbx/ab_initio/density_modification.h -text
+smtbx/ab_initio/development/electron_density_distribution.py -text
 smtbx/ab_initio/tests/__init__.py -text
 smtbx/ab_initio/tests/tst_ab_initio_ext.py -text
 smtbx/ab_initio/tests/tst_charge_flipping.py -text
