--- a/.gitattributes
+++ b/.gitattributes
@@ -92,6 +92,7 @@ fftw3tbx/ext.cpp svneol=native#text/plain
 fftw3tbx/libtbx_config -text
 fftw3tbx/libtbx_refresh.py svneol=native#text/x-python
 fftw3tbx/tst_ext.py svneol=native#text/x-python
+gltbx/tst_viewer_utils.py svneol=native#text/x-python
 gltbx/viewer_utils.py svneol=native#text/x-python
 gltbx/viewer_utils_ext.cpp svneol=native#text/plain
 gltbx/wx_controllers.py -text
