--- a/.gitattributes
+++ b/.gitattributes
@@ -103,6 +103,7 @@ iotbx/ccp4_map/SConscript -text
 iotbx/ccp4_map/__init__.py svneol=native#text/x-python
 iotbx/ccp4_map/ext.cpp svneol=native#text/plain
 iotbx/ccp4_map/tst.py svneol=native#text/x-python
+iotbx/ccp4_map/tst_input.map -text
 iotbx/cif/__init__.py svneol=native#text/x-python
 iotbx/cif/tst_xray_structure.py svneol=native#text/x-python
 iotbx/cif/xray_structure.py svneol=native#text/x-python
