--- a/.gitattributes
+++ b/.gitattributes
@@ -71,7 +71,8 @@ crys3d/images.py -text
 crys3d/wx_extra.py -text
 crys3d/wx_map_viewer.py -text
 crys3d/wx_map_viewer_example.py -text
-dox/references.bib -text
+dox/cctbx_notations.sty -text
+dox/cctbx_references.bib -text
 dox/rst/python_cpp_mix.png -text
 dox/sbgrid2008_update_generated_files.csh -text
 dox/siena2005/cctbx_central_types.pdf -text svneol=unset#application/pdf
