factor out the preamble; add hyperref to the produced PDF; quickly typeset the last bit of "transform and change of bases"

--- a/.gitattributes
+++ b/.gitattributes
@@ -73,6 +73,7 @@ crys3d/wx_extra.py -text
 crys3d/wx_map_viewer.py -text
 crys3d/wx_map_viewer_example.py -text
 dox/cctbx_notations.sty -text
+dox/cctbx_preamble.sty -text
 dox/cctbx_references.bib -text
 dox/rst/python_cpp_mix.png -text
 dox/sbgrid2008_update_generated_files.csh -text
