- add a method to transform a miller.array with an operator (c.f. section 1 of miller/transform_and_change_of_basis) - add sum_sq - fix a nasty bug in __mul__ - division by an array of data

--- a/.gitattributes
+++ b/.gitattributes
@@ -46,6 +46,7 @@ cctbx/regression/structure_start.pickle -text
 cctbx/regression/tst_adp_constraints_cartesian.py -text
 cctbx/regression/tst_grouped_data.py -text
 cctbx/regression/tst_math_module.py -text
+cctbx/regression/tst_miller_transform.py -text
 cctbx/regression/tst_show_cosets.py -text
 cctbx/regression/tst_structure_factors_multithread.py -text
 cctbx/regression/tst_weighting_schemes.py -text
