Basic support for dtrace.

--- a/.gitattributes
+++ b/.gitattributes
@@ -182,6 +182,7 @@ libtbx/command_line/assert_line_count.py svneol=native#text/x-python
 libtbx/command_line/bash.sh -text
 libtbx/command_line/bibtex.sh -text
 libtbx/command_line/csh.sh -text
+libtbx/command_line/dtrace.py -text
 libtbx/command_line/extract_code_from_txt.py svneol=native#text/x-python
 libtbx/command_line/find_files.py -text
 libtbx/command_line/latex.sh -text
@@ -194,6 +195,7 @@ libtbx/command_line/show_environ_usage.py svneol=native#text/x-python
 libtbx/command_line/show_include_paths.py svneol=native#text/x-python
 libtbx/command_line/show_number_of_processors.py svneol=native#text/x-python
 libtbx/command_line/tcsh.sh -text
+libtbx/dtrace/profile.d -text
 libtbx/libtbx_refresh.py -text
 libtbx/object_oriented_patterns.py -text
 libtbx/phil/doc.txt svneol=native#text/plain
