--- a/.gitattributes
+++ b/.gitattributes
@@ -74,6 +74,7 @@ crys3d/images.py -text
 crys3d/wx_extra.py -text
 crys3d/wx_map_viewer.py -text
 crys3d/wx_map_viewer_example.py -text
+crys3d/wx_model_viewer.py -text
 dox/cctbx_notations.sty -text
 dox/cctbx_preamble.sty -text
 dox/cctbx_references.bib -text
