--- a/.gitattributes
+++ b/.gitattributes
@@ -348,6 +348,9 @@ scitbx/math/sphere_sphere_intersection.py svneol=native#text/x-python
 scitbx/math/superpose.h -text
 scitbx/matrix/delta_tensors.h -text
 scitbx/misc/positive_getitem_index.h svneol=native#text/plain
+scitbx/rigid_body_dynamics/__init__.py svneol=native#text/x-python
+scitbx/rigid_body_dynamics/featherstone.py svneol=native#text/x-python
+scitbx/rigid_body_dynamics/tst_featherstone.py svneol=native#text/x-python
 scitbx/source_generators/flex_fwd_h.py -text
 scitbx/sparse/__init__.py -text
 scitbx/sparse/boost_python/SConscript -text
