--- a/libtbx/SConscript
+++ b/libtbx/SConscript
@@ -450,6 +450,7 @@ else:
     env_etc.c_link = "gcc"
     env_etc.ccflags_base = [
       "-fno-strict-aliasing",
+      "-ftrapv",
       "-fPIC"]
     env_etc.cxxflags_base = env_etc.ccflags_base + [
       "-ftemplate-depth-120"]
@@ -600,6 +601,7 @@ else:
       warn_options = ["-Wall", "-Wno-sign-compare", "-Werror"]
     env_etc.ccflags_base = [
       "-fno-strict-aliasing",
+      "-ftrapv",
       "-fPIC"] + warn_options
     if (cxx == "c++"):
       env_etc.ccflags_base.extend(["-no-cpp-precomp", "-Wno-long-double"])
