libtbx/SConscript: add gcc -ftrapv option only if gcc version >= 4.1.2 (to avoid internal compiler errors and other failures)

--- a/libtbx/SConscript
+++ b/libtbx/SConscript
@@ -449,9 +449,10 @@ else:
     )
     env_etc.c_link = "gcc"
     env_etc.ccflags_base = [
-      "-fno-strict-aliasing",
-      "-ftrapv",
-      "-fPIC"]
+      "-fPIC",
+      "-fno-strict-aliasing"]
+    if (env_etc.gcc_version >= 40102):
+      env_etc.ccflags_base.append("-ftrapv")
     env_etc.cxxflags_base = env_etc.ccflags_base + [
       "-ftemplate-depth-120"]
     if (libtbx.env.build_options.warning_level == 0):
