--- a/dox/epydoc.conf
+++ b/dox/epydoc.conf
@@ -1,15 +1,15 @@
 [epydoc]
 
-docformat: restructuredtext
+docformat: epytext
 
 output: html
 
-target: ../../../htdocs/current/python_with_epydoc
+target: ../../htdocs/current/python
 
 name: cctbx
 
 frames: no
 
-modules: libtbx boost_adaptbx scitbx cctbx iotbx mmtbx
+modules: boost libtbx scitbx cctbx mmtbx smtbx
 
 exclude-introspect: start_print_trace
