--- a/libtbx/SConscript
+++ b/libtbx/SConscript
@@ -593,6 +593,11 @@ else:
       SHLIBSUFFIX=env_etc.shlibsuffix,
     )
     env_etc.c_link = "cc"
+    env_etc.ccflags_base = [
+      "-fPIC",
+      "-fno-strict-aliasing"]
+    if (env_etc.gcc_version >= 40102):
+      env_etc.ccflags_base.append("-ftrapv")
     if (libtbx.env.build_options.warning_level == 0):
       warn_options = ["-w"]
       env_etc._enable_more_warnings = "gcc"
@@ -600,10 +605,7 @@ else:
       warn_options = ["-Wall", "-Wno-sign-compare"]
     else:
       warn_options = ["-Wall", "-Wno-sign-compare", "-Werror"]
-    env_etc.ccflags_base = [
-      "-fno-strict-aliasing",
-      "-ftrapv",
-      "-fPIC"] + warn_options
+    env_etc.ccflags_base.extend(warn_options)
     if (cxx == "c++"):
       env_etc.ccflags_base.extend(["-no-cpp-precomp", "-Wno-long-double"])
     env_etc.cxxflags_base = list(env_etc.ccflags_base)
